objects/Demo__c.object
<CustomObject>
    <fields>
        <fullName>Check__c</fullName>
        <label>Check</label>
        <referenceTo>Check__c</referenceTo>
        <relationshipLabel>Demos</relationshipLabel>
        <relationshipName>Demos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Trail_Field__c</fullName>
        <label>Trail Field</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <label>Demo</label>
    <nameField>
        <label>Demo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>